update explore feature
